enable_language(C ASM)

if (${CHARM_OS} STREQUAL "darwin")
    set(ufcontext_sources jump_x86_64_sysv_macho_gas.S ontop_x86_64_sysv_macho_gas.S make_x86_64_sysv_macho_gas.S)
elseif(${CHARM_OS} STREQUAL "linux")
    if(${CHARM_CPU} MATCHES "ppc")
        set(ufcontext_sources jump_ppc64_sysv_elf_gas.S make_ppc64_sysv_elf_gas.S ontop_ppc64_sysv_elf_gas.S)
    else()
       set(ufcontext_sources jump_x86_64_sysv_elf_gas.S ontop_x86_64_sysv_elf_gas.S make_x86_64_sysv_elf_gas.S)
    endif()
elseif(${CHARM_OS} STREQUAL "win")
    if(MSVC)
        set(ufcontext_sources ontop_x86_64_ms_pe_masm.asm jump_x86_64_ms_pe_masm.asm make_x86_64_ms_pe_masm.asm)
    else()
        set(ufcontext_sources ontop_x86_64_ms_pe_gas.S jump_x86_64_ms_pe_gas.S make_x86_64_ms_pe_gas.S)
    endif()
endif()

add_library(boost-context OBJECT ${ufcontext_sources})
set_target_properties(boost-context PROPERTIES LINKER_LANGUAGE CXX)
